test/negative/metal_no_hxrt_runtime_boundary/Main.hx
class Main {
	static function main() {
		trace("needs-runtime");
	}
}
